<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_display_variants_list_titles"
        android:entryValues="@array/pref_display_variants_list_values"
        android:key="@string/pref_key_display_mode_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_display_variant" />

    <Preference
        android:title="@string/pref_title_resting_pulse"
        android:key="@string/pref_key_resting_pulse"
        android:summary="@string/pref_summary_resting_pulse"
        android:defaultValue="70"
        />

    <EditTextPreference
        android:title="@string/pref_title_encryption_password"
        android:key="@string/pref_key_encryption_password"
        android:summary="@string/pref_summary_encryption_password"
        android:defaultValue="@string/pref_default_encryption_password"/>

    <EditTextPreference
        android:title="@string/pref_title_user_age"
        android:key="@string/pref_key_user_age"
        android:summary="@string/pref_summary_user_age"
        android:defaultValue="@string/pref_default_user_age"/>

    <EditTextPreference
        android:title="@string/pref_title_user_gender"
        android:key="@string/pref_key_user_gender"
        android:summary="@string/pref_summary_user_gender"
        android:defaultValue="@string/pref_default_user_gender"/>

</PreferenceScreen>
